FullQa New/src/PS Enterprise/objects/Project_Phase__c.object
<CustomObject>
    <customHelpPage>ProjectPhaseHelp</customHelpPage>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Project Phases</relationshipLabel>
        <relationshipName>Project_Phases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Phase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Project__c)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Project is required</errorMessage>
    </validationRules>
</CustomObject>